Fix with random background color on collection cells.

--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -841,7 +841,7 @@
         <scene sceneID="rzo-AG-MXw">
             <objects>
                 <collectionViewController id="K6k-wL-Ce8" customClass="MIACollectionViewController" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Scn-oM-ZUx">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="Scn-oM-ZUx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
