--- a/Depoza Extension/MainInterface.storyboard
+++ b/Depoza Extension/MainInterface.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7528.3" systemVersion="14D113c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="M4Y-Lb-cyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="M4Y-Lb-cyx">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7518.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--Today View Controller-->
@@ -48,7 +48,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No new expense today." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJH-L4-n5K">
-                                <rect key="frame" x="20" y="65" width="180" height="21"/>
+                                <rect key="frame" x="15" y="65" width="180" height="21"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="TkR-QU-t9Z"/>
@@ -61,7 +61,7 @@
                         <constraints>
                             <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="Bg9-qK-6yJ" secondAttribute="bottom" priority="250" id="33I-h6-pID"/>
                             <constraint firstItem="Bg9-qK-6yJ" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" priority="250" id="9Ao-DT-Izg"/>
-                            <constraint firstItem="OJH-L4-n5K" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="20" symbolic="YES" id="AZh-6w-gmS"/>
+                            <constraint firstItem="OJH-L4-n5K" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="15" id="AZh-6w-gmS"/>
                             <constraint firstAttribute="centerY" secondItem="OJH-L4-n5K" secondAttribute="centerY" id="GHJ-ev-0Qr"/>
                             <constraint firstAttribute="trailing" secondItem="Bg9-qK-6yJ" secondAttribute="trailing" id="bzZ-WA-VgG"/>
                             <constraint firstItem="Bg9-qK-6yJ" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="ifP-cZ-Otf"/>
