--- a/Depoza/Base.lproj/Main.storyboard
+++ b/Depoza/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="wje-QN-dOA" userLabel="InfoView">
-                                    <rect key="frame" x="0.0" y="64" width="320" height="228"/>
+                                    <rect key="frame" x="0.0" y="64" width="320" height="239"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kxL-xl-ePS">
@@ -79,9 +79,9 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCj-a3-xcF">
-                                            <rect key="frame" x="0.0" y="64" width="320" height="133"/>
+                                            <rect key="frame" x="0.0" y="64" width="320" height="175"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="133" id="0sj-Na-8SW"/>
+                                                <constraint firstAttribute="height" constant="175" id="0sj-Na-8SW"/>
                                             </constraints>
                                             <connections>
                                                 <segue destination="Iim-03-1Nc" kind="embed" identifier="CategoriesInfo" id="X0C-KF-259"/>
@@ -124,7 +124,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="250" text="Description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDT-yv-n1E">
-                                                    <rect key="frame" x="67" y="26" width="74" height="17"/>
+                                                    <rect key="frame" x="65" y="26" width="74" height="17"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -137,7 +137,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="DDT-yv-n1E" secondAttribute="bottom" constant="10" id="YbP-mW-cs7"/>
                                                 <constraint firstAttribute="centerY" secondItem="KBt-h0-rbQ" secondAttribute="centerY" id="aSY-XL-JM1"/>
                                                 <constraint firstItem="O0c-N4-amn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="son-R0-NKv" secondAttribute="trailing" constant="8" symbolic="YES" id="j9E-jD-AkG"/>
-                                                <constraint firstItem="DDT-yv-n1E" firstAttribute="leading" secondItem="KBt-h0-rbQ" secondAttribute="trailing" constant="10" id="lyo-6G-J20"/>
+                                                <constraint firstItem="DDT-yv-n1E" firstAttribute="leading" secondItem="KBt-h0-rbQ" secondAttribute="trailing" constant="8" id="lyo-6G-J20"/>
                                                 <constraint firstItem="son-R0-NKv" firstAttribute="leading" secondItem="KBt-h0-rbQ" secondAttribute="trailing" constant="8" id="v7C-gd-Nyx"/>
                                                 <constraint firstItem="KBt-h0-rbQ" firstAttribute="leading" secondItem="PiI-ED-hPV" secondAttribute="leading" constant="15" id="xMA-3V-KPB"/>
                                                 <constraint firstAttribute="trailing" secondItem="O0c-N4-amn" secondAttribute="trailing" constant="8" id="zlH-ey-Uk7"/>
@@ -205,7 +205,7 @@
                                     <constraint firstAttribute="height" constant="30" id="1uD-qQ-cKm"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="yes" returnKeyType="done"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" returnKeyType="done"/>
                                 <connections>
                                     <action selector="descriptionTextFieldDidEndOnExit:" destination="Xcd-an-bxR" eventType="editingDidEndOnExit" id="1GE-gH-8y4"/>
                                 </connections>
@@ -758,17 +758,19 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3XK-GM-rDp" id="fUh-QF-WyV">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CategoryName" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Px9-bS-Vrx">
-                                                    <rect key="frame" x="15" y="7" width="297" height="40"/>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CategoryName" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ALc-Cy-ssO">
+                                                    <rect key="frame" x="15" y="12" width="305" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="LPx-A9-kgg"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                                    <textInputTraits key="textInputTraits" autocorrectionType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Px9-bS-Vrx" secondAttribute="bottom" constant="6" id="6Yy-MQ-8jp"/>
-                                                <constraint firstItem="Px9-bS-Vrx" firstAttribute="leading" secondItem="fUh-QF-WyV" secondAttribute="leading" constant="15" id="TML-G7-ytG"/>
-                                                <constraint firstAttribute="trailing" secondItem="Px9-bS-Vrx" secondAttribute="trailing" constant="8" id="amg-eq-mFC"/>
-                                                <constraint firstItem="Px9-bS-Vrx" firstAttribute="top" secondItem="fUh-QF-WyV" secondAttribute="top" constant="7" id="srN-iw-q7r"/>
+                                                <constraint firstAttribute="trailing" secondItem="ALc-Cy-ssO" secondAttribute="trailing" id="eXg-mS-0kH"/>
+                                                <constraint firstAttribute="centerY" secondItem="ALc-Cy-ssO" secondAttribute="centerY" id="pfa-6E-Oto"/>
+                                                <constraint firstItem="ALc-Cy-ssO" firstAttribute="leading" secondItem="fUh-QF-WyV" secondAttribute="leading" constant="15" id="vnJ-5N-fl1"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -820,7 +822,7 @@
                     <connections>
                         <outlet property="doneButton" destination="X7d-EU-Nxl" id="GPC-0d-kqX"/>
                         <outlet property="iconImage" destination="STL-tk-nBM" id="hWl-4p-wcR"/>
-                        <outlet property="textField" destination="Px9-bS-Vrx" id="Jcz-C4-gQi"/>
+                        <outlet property="textField" destination="ALc-Cy-ssO" id="zWq-EA-VYb"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="woX-nx-Vaz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -987,17 +989,20 @@
                         <viewControllerLayoutGuide type="bottom" id="ZkX-M7-leA"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="2jd-md-Oac">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="133"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7up-cW-8Pr">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="133"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7up-cW-8Pr">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="138"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="15" minimumInteritemSpacing="0.0" id="6pz-sd-gSv">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="138" id="8VD-Gg-mhy"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="15" minimumInteritemSpacing="7" id="gdR-1Z-62z">
                                     <size key="itemSize" width="64" height="64"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="15" minY="5" maxX="15" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="15" minY="3" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="7Q8-bJ-Hyt" customClass="CategoryInfoCollectionViewCell">
@@ -1042,18 +1047,31 @@
                                     <outlet property="delegate" destination="Iim-03-1Nc" id="aqW-up-Qps"/>
                                 </connections>
                             </collectionView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="VC3-d3-h8e">
+                                <rect key="frame" x="141" y="138" width="39" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="37" id="0Vu-D2-3D5"/>
+                                </constraints>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="currentPageIndicatorTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <action selector="pageControlDidChangeValue:" destination="Iim-03-1Nc" eventType="valueChanged" id="MaH-VG-JO7"/>
+                                </connections>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="7up-cW-8Pr" firstAttribute="leading" secondItem="2jd-md-Oac" secondAttribute="leading" id="Dcf-dv-yOT"/>
                             <constraint firstItem="7up-cW-8Pr" firstAttribute="top" secondItem="IuF-sS-e70" secondAttribute="bottom" id="GBH-Ln-6mW"/>
-                            <constraint firstItem="ZkX-M7-leA" firstAttribute="top" secondItem="7up-cW-8Pr" secondAttribute="bottom" id="ubk-1W-gSa"/>
+                            <constraint firstItem="VC3-d3-h8e" firstAttribute="top" secondItem="7up-cW-8Pr" secondAttribute="bottom" id="lc5-TX-SZ5"/>
+                            <constraint firstAttribute="centerX" secondItem="VC3-d3-h8e" secondAttribute="centerX" id="n73-6I-dBi"/>
                             <constraint firstAttribute="trailing" secondItem="7up-cW-8Pr" secondAttribute="trailing" id="zz3-Pc-jpT"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <connections>
                         <outlet property="collectionView" destination="7up-cW-8Pr" id="vmt-qS-ysd"/>
+                        <outlet property="pageControl" destination="VC3-d3-h8e" id="rjB-if-TTd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ngY-57-QyD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1094,8 +1112,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="eiF-x1-yp8"/>
         <segue reference="Cd2-B6-5f6"/>
         <segue reference="3er-JC-Cyy"/>
-        <segue reference="hGy-jW-v8B"/>
     </inferredMetricsTieBreakers>
 </document>
